crates/solidity-v2/testing/snapshots/diagnostics_output/type_system/cannot_call_via_contract_type_name/external_base/generated/slang/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

Error: Cannot call function via contract type name.
    ╭─[input.sol:20:9]
    │
 20 │         base.ext();
    │         ─────┬────  
    │              ╰────── Error occurred here.
────╯
